[gd_scene load_steps=9 format=3 uid="uid://cq4fvy5of758w"]

[ext_resource type="Script" uid="uid://bqewkjc7ya61p" path="res://Scripts/TMP/dummy.gd" id="1_5kotm"]
[ext_resource type="Texture2D" uid="uid://66l661mk3ad4" path="res://Sprites/0x72_DungeonTilesetII_v1.7/frames/big_zombie_idle_anim_f0.png" id="2_v6rxc"]
[ext_resource type="Texture2D" uid="uid://dw3b5obwc4f3e" path="res://Sprites/0x72_DungeonTilesetII_v1.7/frames/big_zombie_idle_anim_f1.png" id="3_qlftl"]
[ext_resource type="Texture2D" uid="uid://ogv7a7drd0is" path="res://Sprites/0x72_DungeonTilesetII_v1.7/frames/big_zombie_idle_anim_f2.png" id="4_0ojuy"]
[ext_resource type="Texture2D" uid="uid://rj06nx8pjypr" path="res://Sprites/0x72_DungeonTilesetII_v1.7/frames/big_zombie_idle_anim_f3.png" id="5_qkre0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m72hr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v6rxc")
}, {
"duration": 1.0,
"texture": ExtResource("3_qlftl")
}, {
"duration": 1.0,
"texture": ExtResource("4_0ojuy")
}, {
"duration": 1.0,
"texture": ExtResource("5_qkre0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e5h0b"]
size = Vector2(56, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_5kotm"]
radius = 72.0

[node name="Dummy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_5kotm")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_m72hr")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 12)
shape = SubResource("RectangleShape2D_e5h0b")

[node name="TimerRespawn" type="Timer" parent="."]
one_shot = true

[node name="TimerAttack" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 32)
shape = SubResource("CircleShape2D_5kotm")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -64.0
offset_top = -64.0
offset_right = 72.0
offset_bottom = -37.0

[connection signal="timeout" from="TimerRespawn" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_timer_attack_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
